# klotski

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  case.cc  case.cpp  common.cc  common.h  klotski  klotski.cc  klotski.h  main.cc  main.cpp  result_check.py  verify.py  xmake.lua
src/: CMakeLists.txt  basic_ranges_demo.cc  basic_ranges_demo.h  core_demo.cc  core_demo.h  demo.py  fast_cal.cc  fast_cal.h  main.c  main.cc
src/all_cases/: CMakeLists.txt  all_cases.cc  all_cases.h  basic_ranges.cc  basic_ranges.h
src/analyse/: CMakeLists.txt  analyse.cc  analyse.h  backtrack.cc
src/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  chore.cc
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/common/: CMakeLists.txt
src/common_code/: CMakeLists.txt  common_code.cc  common_code.h  serialize.cc
src/core/: CMakeLists.txt  bfs.h  core.cc  core.h  main.cc
src/core/all_cases/: all_cases.cc  all_cases.h  all_cases_fwd.h  basic_ranges.cc  basic_ranges.h  inline_impl.h  inline_impl.inl  reverse.h
src/core/analyse/: analyse.cc  analyse.h  backtrack.cc  layer_queue.h
src/core/benchmark/: all_cases.cc  analyse.cc  codec.cc  common_code.cc  fast_cal.cc  group.cc  ranges.cc  raw_code.cc  short_code.cc  utility.cc
src/core/common_code/: common_code.cc  common_code.h  common_code_fwd.h  convert.cc  inline_impl.h  serialize.cc  sundry.cc
src/core/core/: core.h
src/core/fast_cal/: fast_cal.h  layer_queue.h
src/core/ffi/: all_cases.cc  klotski.h
src/core/group/: group.h  group_fwd.h
src/core/mover/: mover.h  s2_hint_mover.h  s2_mover.h
src/core/ranges/: ranges.h  ranges_fwd.h  statistics.py
src/core/raw_code/: convert.cc  inline_impl.h  mirror.cc  raw_code.cc  raw_code.h  raw_code_fwd.h  sundry.cc
src/core/short_code/: convert.cc  inline_impl.h  serialize.cc  serialize_chars.h  short_code.cc  short_code.h  short_code_fwd.h  sundry.cc
src/core/utils/: common.h  utility.h  worker.inl
src/core_ffi/: CMakeLists.txt
src/core_ffi/c_ffi/: CMakeLists.txt  all_cases.cc
src/core_ffi/go_ffi/: demo.c  demo.cc  demo.h  klotski.go  test_c.sh  test_cpp.sh
src/core_ffi/include/: klotski.h
src/core_ffi/py_ffi/: CMakeLists.txt  binder.cc  demo.cc  klotski.cc  py_group.cc  py_group_union.cc
src/core_ffi/python_ffi/: CMakeLists.txt  klotski.cc
src/core_ffi/rust_ffi/: CMakeLists.txt  Cargo.toml  build.rs
src/core_test/: CMakeLists.txt
src/core_test/cases/: all_cases.cc  basic_ranges.cc  cases_helper.h  group.cc  group_legacy.cc  group_pro.cc  group_union.cc  helper.h  ranges.cc  ranges_union.cc
src/core_test/codec/: common_code.cc  mirror.cc  raw_code.cc  sample.h  short_code.cc  test_samples.h
src/core_test/core/: core.cc
src/core_test/ffi/: all_cases.cc
src/core_test/group/: group_legacy.cc  group_pro.cc  group_union.cc
src/core_test/group_tmp/: group_extend.cc  group_union.cc
src/core_test/helper/: block_num.h  concurrent.h  expect.h  fixture.h  group.h  hash.h  mirror.h  parallel.h
src/core_test/mover/: mover.cc  s2_mover.cc
src/core_test/utility/: concurrent.h  exposer.h  hash.h
src/core_test/utils/: exposer.h  xxhsum.h
src/fast_cal/: CMakeLists.txt  cal_core.cc  fast_cal.cc  fast_cal.h
src/graph/: CMakeLists.txt  case.cc  graph.cc  graph.h
src/graph/svg/: CMakeLists.txt  svg.cc  svg.h
src/klotski/: CMakeLists.txt
src/klotski/all_cases/: CMakeLists.txt  all_cases.cc  all_cases.h  basic_ranges.cc  basic_ranges.h
src/klotski/analyse/: CMakeLists.txt  backtrack.cc
src/klotski/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  chore.cc
src/klotski/common_code/: CMakeLists.txt  common_code.cc  common_code.h  convert.cc  serialize.cc
src/klotski/core/: CMakeLists.txt  core.cc  core.h
src/klotski/fast_cal/: CMakeLists.txt  fast_cal.cc  fast_cal.h
src/klotski/ffi/: all_cases.cc  codec.cc  klotski.h  klotski_ffi.cc  tmain.cc  version.cc
src/klotski/graph/: CMakeLists.txt  case.cc  graph.cc
src/klotski/raw_code/: CMakeLists.txt  convert.cc  raw_code.cc  raw_code.h
src/klotski/short_code/: CMakeLists.txt  convert.cc  serialize.cc  short_code.cc  short_code.h
src/klotski/utils/: CMakeLists.txt  common.cc  common.h  version.h.in
src/klotski_core/: CMakeLists.txt  klotski.h  xmake.lua
src/klotski_core/all_cases/: CMakeLists.txt  all_cases.cc  all_cases.h  basic_ranges.cc  basic_ranges.h
src/klotski_core/analyse/: CMakeLists.txt  analyse.h
src/klotski_core/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  chore.cc
src/klotski_core/common_code/: CMakeLists.txt  common_code.cc  common_code.h  convert.cc  serialize.cc
src/klotski_core/core/: core.cc  core.h
src/klotski_core/fast_cal/: CMakeLists.txt
src/klotski_core/ffi/: all_cases.cc  benchmark.cc  codec.cc  metadata.cc  tmain.cc
src/klotski_core/graph/: CMakeLists.txt
src/klotski_core/group/: CMakeLists.txt  basic.cc  basic_id.cc  block_num.cc  block_num_.cc  build_cases.cc  group.cc  group.h  group_info.cc  group_seeds.h  index.h  seeds.cc  seeds.h  size.h  type_id.h
src/klotski_core/raw_code/: CMakeLists.txt  convert.cc  mirror.cc  raw_code.cc  raw_code.h
src/klotski_core/short_code/: CMakeLists.txt  convert.cc  serialize.cc  serialize_chars.h  short_code.cc  short_code.h
src/klotski_core/utils/: common.cc  common.h  metadata.h.in  (+2 more)
src/raw_code/: CMakeLists.txt  convert.cc  raw_code.cc  raw_code.h
src/rust_ffi/: Cargo.toml  build.rs  wrapper.h
src/short_code/: CMakeLists.txt  convert.cc  data_loader.cc  serialize.cc  serialize_chars.h  short_code.cc  short_code.h  short_code_chars.h  short_code_mark.h
src/utils/: CMakeLists.txt  common.cc  common.h
test/: CMakeLists.txt  all_cases.cc  common_code.cc  raw_code.cc  short_code.cc  utils.cc
test/basic/: all_cases.cc  utils.cc
test/codec/: common_code.cc  range_split.h  raw_code.cc  short_code.cc
test/core/: core.cc
test/ffi/: all_cases.cc  codec.cc  metadata.cc
test/global/: common_code.cc  global_utils.cc  global_utils.h  raw_code.cc  short_code.cc  utils.cc
test/group/: advance.cc  basic.cc  basic_id.cc  block_num.cc  build_cases.cc  group.cc  group_info.cc
(+282 files in other folders)
